unpackaged/main/default/objects/Opportunity/fields/Account_Qualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Qualification_Date__c</fullName>
    <label>Account Qualification Date</label>
    <type>DateTime</type>
</CustomField>