unpackaged/main/default/objects/Opportunity/fields/Age_of_record__c.field-meta.xml
<CustomField>
    <fullName>Age_of_record__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of record</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>