unpackaged/main/default/objects/Opportunity/fields/AQL_Date1__c.field-meta.xml
<CustomField>
    <fullName>AQL_Date1__c</fullName>
    <label>AQL Date</label>
    <type>DateTime</type>
</CustomField>