unpackaged/main/default/objects/Opportunity/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <formula>TEXT( MSA_Contract__r.Auto_renewal__c )</formula>
    <label>Auto-Renewal</label>
    <type>Text</type>
</CustomField>