unpackaged/main/default/objects/Opportunity/fields/Consideration_Date__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Date__c</fullName>
    <label>Consideration Date</label>
    <type>DateTime</type>
</CustomField>