unpackaged/main/default/objects/Opportunity/fields/Contracting_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Entity__c</fullName>
    <label>Contracting Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EK: PF Canada Inc.</fullName>
            </value>
            <value>
                <fullName>PF: PF LLC</fullName>
            </value>
            <value>
                <fullName>GB US: GB Inc</fullName>
            </value>
            <value>
                <fullName>GB RoW: GB AB</fullName>
            </value>
            <value>
                <fullName>3MW US: 3MW LLC</fullName>
            </value>
            <value>
                <fullName>3MW RoW: 3MW GmbH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>