unpackaged/main/default/objects/Opportunity/fields/Duration_Account_Quali_to_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Duration_Account_Quali_to_Consideration__c</fullName>
    <formula>DATETIMEVALUE( Consideration_Date__c ) -  DATETIMEVALUE( Account_Qualification_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Account Quali to Consideration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>