unpackaged/main/default/objects/Opportunity/fields/Duration_Consideration_to_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Duration_Consideration_to_Evaluation__c</fullName>
    <formula>DATETIMEVALUE( Evaluation__c ) -  DATETIMEVALUE( Consideration_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Consideration to Evaluation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>