unpackaged/main/default/objects/Opportunity/fields/Duration_Evaluation_to_Verbal_Commit__c.field-meta.xml
<CustomField>
    <fullName>Duration_Evaluation_to_Verbal_Commit__c</fullName>
    <formula>DATETIMEVALUE( Verbal_Commit__c ) -  DATETIMEVALUE( Evaluation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Evaluation to Verbal Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>