unpackaged/main/default/objects/Opportunity/fields/Duration_MQL_to_SAL__c.field-meta.xml
<CustomField>
    <fullName>Duration_MQL_to_SAL__c</fullName>
    <formula>DATETIMEVALUE(SAL_Date__c) - DATETIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration MQL to SAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>