unpackaged/main/default/objects/Opportunity/fields/Duration_Negotiations_to_Execution__c.field-meta.xml
<CustomField>
    <fullName>Duration_Negotiations_to_Execution__c</fullName>
    <formula>DATETIMEVALUE( Execution__c ) -  DATETIMEVALUE( Negotiations__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Negotiations to Execution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>