unpackaged/main/default/objects/Opportunity/fields/Duration_of_SQL_to_Account_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_SQL_to_Account_Qualification__c</fullName>
    <formula>DATETIMEVALUE( Account_Qualification_Date__c ) -  DATETIMEVALUE(  SQL_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration of SQL to Account Qualification</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>