unpackaged/main/default/objects/Opportunity/fields/Duration_SAL_to_SQL__c.field-meta.xml
<CustomField>
    <fullName>Duration_SAL_to_SQL__c</fullName>
    <formula>DATETIMEVALUE(SQL_Date__c) - DATETIMEVALUE(SAL_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration SAL to SQL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>