unpackaged/main/default/objects/Opportunity/fields/Duration_SQL_to_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Duration_SQL_to_Close_Date__c</fullName>
    <formula>Opportunity_Close_Date__c  - DATEVALUE( SQL_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration SQL to Close Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>