unpackaged/main/default/objects/Opportunity/fields/Duration_Verbal_Commit_to_Negotiations__c.field-meta.xml
<CustomField>
    <fullName>Duration_Verbal_Commit_to_Negotiations__c</fullName>
    <formula>DATETIMEVALUE( Negotiations__c ) -  DATETIMEVALUE( Verbal_Commit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Verbal Commit to Negotiations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>