unpackaged/main/default/objects/Opportunity/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation Date</label>
    <type>DateTime</type>
</CustomField>