unpackaged/main/default/objects/Opportunity/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>