unpackaged/main/default/objects/Opportunity/fields/Finance_Review__c.field-meta.xml
<CustomField>
    <fullName>Finance_Review__c</fullName>
    <label>Finance Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review Needed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>