unpackaged/main/default/objects/Opportunity/fields/Finance_Reviewed_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Reviewed_Complete_Date__c</fullName>
    <label>Finance Reviewed Complete Date</label>
    <type>DateTime</type>
</CustomField>