unpackaged/main/default/objects/Opportunity/fields/Hardware_Total__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Total__c</fullName>
    <label>Hardware Total</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Category_List__c</field>
        <operation>equals</operation>
        <value>Hardware</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>