unpackaged/main/default/objects/Opportunity/fields/Implementation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Notes__c</fullName>
    <label>Implementation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>