unpackaged/main/default/objects/Opportunity/fields/Invoice_split_notes__c.field-meta.xml
<CustomField>
    <fullName>Invoice_split_notes__c</fullName>
    <label>Invoice split notes</label>
    <type>TextArea</type>
</CustomField>