unpackaged/main/default/objects/Opportunity/fields/Logged_In_User_s_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User_s_Opportunity__c</fullName>
    <formula>IF( CreatedBy.Id = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User&#39;s Opportunity</label>
    <type>Checkbox</type>
</CustomField>