unpackaged/main/default/objects/Opportunity/fields/Negotiations__c.field-meta.xml
<CustomField>
    <fullName>Negotiations__c</fullName>
    <label>Negotiations Date</label>
    <type>DateTime</type>
</CustomField>