unpackaged/main/default/objects/Opportunity/fields/Non_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Revenue__c</fullName>
    <label>Non-Recurring Revenue</label>
    <summarizedField>OpportunityLineItem.Non_Recurring_Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>