unpackaged/main/default/objects/Opportunity/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <formula>IF( ISPICKVAL( StageName , &#39;Closed Lost&#39;) , CloseDate,
IF( ISPICKVAL( StageName , &#39;Closed Won&#39;) , CloseDate,
IF( ISPICKVAL( StageName , &#39;Close Pending&#39;) , CloseDate,
NULL
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>