unpackaged/main/default/objects/Opportunity/fields/Opportunity_Profile__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Profile</label>
    <type>Text</type>
</CustomField>