unpackaged/main/default/objects/Opportunity/fields/Partner_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>