unpackaged/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <formula>IF( SBQQ__PrimaryQuote__r.SBQQ__Primary__c = True,  TEXT(SBQQ__PrimaryQuote__r.SBQQ__PaymentTerms__c), null)</formula>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>