unpackaged/main/default/objects/Opportunity/fields/Primary_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Risk_Reason__c</fullName>
    <label>Primary Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Pressure</fullName>
            </value>
            <value>
                <fullName>Divestiture of Asset(s)</fullName>
            </value>
            <value>
                <fullName>Renegotiation Cost</fullName>
            </value>
            <value>
                <fullName>Product Satisfaction</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>