unpackaged/main/default/objects/Opportunity/fields/Prior_Owner_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Prior_Owner_s_Email__c</fullName>
    <label>Prior Owner&#39;s Email</label>
    <type>Email</type>
</CustomField>