unpackaged/main/default/objects/Opportunity/fields/QS_Decommission_Reason__c.field-meta.xml
<CustomField>
    <fullName>QS_Decommission_Reason__c</fullName>
    <description>More details around why the customer decommissioned (reduction or cancellation)</description>
    <inlineHelpText>More details around why the customer decommissioned (reduction or cancellation)</inlineHelpText>
    <label>Decommission Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QS_Order_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM Turn-Over/Lack of Follow-Up</fullName>
            </value>
            <value>
                <fullName>Associated or Consolidating with Competitor</fullName>
            </value>
            <value>
                <fullName>Bankruptcy or Acquisition</fullName>
            </value>
            <value>
                <fullName>Client Non-Responsiveness</fullName>
            </value>
            <value>
                <fullName>Client Personnel Change</fullName>
            </value>
            <value>
                <fullName>Contract Challenges</fullName>
            </value>
            <value>
                <fullName>Customer Service &amp; Support</fullName>
            </value>
            <value>
                <fullName>Feature Deficiency/Functionality</fullName>
            </value>
            <value>
                <fullName>Implementation or Migration Time &amp; Cost</fullName>
            </value>
            <value>
                <fullName>Internal Business Reasons</fullName>
            </value>
            <value>
                <fullName>Legacy Product/Version Issues</fullName>
            </value>
            <value>
                <fullName>Low or Non-Usage</fullName>
            </value>
            <value>
                <fullName>Migrated to Another Product Line</fullName>
            </value>
            <value>
                <fullName>Older Version/Cost of Ownership or Upgrade</fullName>
            </value>
            <value>
                <fullName>Partner/Third-Party Issue</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product No Longer Supported</fullName>
            </value>
            <value>
                <fullName>Reduction of Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>