unpackaged/main/default/objects/Opportunity/fields/QS_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>QS_Order_Type__c</fullName>
    <description>An additional deal type classification. This is where Sales clarifies whether this is New Product, Renewal, Decommission, etc.</description>
    <inlineHelpText>An additional deal type classification. Clarifies whether this is New Product, Renewal, Decommission, etc.</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>AddOn</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Subscription Renewal</fullName>
            </value>
            <value>
                <fullName>Decommission</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Overage</fullName>
            </value>
            <value>
                <fullName>Debooking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>