unpackaged/main/default/objects/Opportunity/fields/QS_Sales_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>QS_Sales_Forecast_Category__c</fullName>
    <description>Indicates Sales&#39;s estimate of the forecast category and may differ from Manager Forecast Category.</description>
    <inlineHelpText>The forecast status of the opportunity as noted by the sales person.</inlineHelpText>
    <label>Sales Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4 - Omitted</fullName>
            </value>
            <value>
                <fullName>3 - Pipeline</fullName>
            </value>
            <value>
                <fullName>2 - Best Case</fullName>
            </value>
            <value>
                <fullName>1 - Commit</fullName>
            </value>
            <value>
                <fullName>0 - Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>