unpackaged/main/default/objects/Opportunity/fields/Risk_Comments__c.field-meta.xml
<CustomField>
    <fullName>Risk_Comments__c</fullName>
    <label>Risk Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>