unpackaged/main/default/objects/Opportunity/fields/sbaa__ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>sbaa__ApprovalStatus__c</fullName>
    <description>Overall Approval Status for this Opportunity</description>
    <inlineHelpText>Overall Approval Status for this Opportunity</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>