unpackaged/main/default/objects/Opportunity/fields/sbaa__SubmittedUser__c.field-meta.xml
<CustomField>
    <fullName>sbaa__SubmittedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User requesting approval for the Opportunity.</description>
    <inlineHelpText>User requesting approval for the Opportunity.</inlineHelpText>
    <label>Submitted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SubmittedUserOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>