unpackaged/main/default/objects/Opportunity/fields/Services_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Services_Next_Steps__c</fullName>
    <label>Services Next Steps</label>
    <type>TextArea</type>
</CustomField>