unpackaged/main/default/objects/Opportunity/fields/Software_Total__c.field-meta.xml
<CustomField>
    <fullName>Software_Total__c</fullName>
    <label>Software Total</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Category_List__c</field>
        <operation>equals</operation>
        <value>Software</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>