unpackaged/main/default/objects/Opportunity/fields/SQL_Date__c.field-meta.xml
<CustomField>
    <fullName>SQL_Date__c</fullName>
    <label>SQL Date</label>
    <type>DateTime</type>
</CustomField>