unpackaged/main/default/objects/Opportunity/fields/Subscription_term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_term__c</fullName>
    <label>Subscription term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>