unpackaged/main/default/objects/Opportunity/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <length>80</length>
    <type>Text</type>
</CustomField>