unpackaged/main/default/objects/Opportunity/fields/TAL_Date1__c.field-meta.xml
<CustomField>
    <fullName>TAL_Date1__c</fullName>
    <label>TAL Date</label>
    <type>DateTime</type>
</CustomField>