unpackaged/main/default/objects/Opportunity/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>IF( SBQQ__PrimaryQuote__r.SBQQ__Primary__c = true, SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>