unpackaged/main/default/objects/Opportunity/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <formula>IF( SBQQ__PrimaryQuote__r.SBQQ__Primary__c = true,  SBQQ__PrimaryQuote__r.Trial__c , false)</formula>
    <label>Trial</label>
    <type>Checkbox</type>
</CustomField>