unpackaged/main/default/objects/Opportunity/fields/Verbal_Commit__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Commit__c</fullName>
    <label>Verbal Commit Date</label>
    <type>DateTime</type>
</CustomField>