unpackaged/main/default/objects/Opportunity/fields/Win_Loss_Comment__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Comment__c</fullName>
    <label>Win/Loss Comment</label>
    <type>TextArea</type>
</CustomField>