unpackaged/main/default/objects/Opportunity/recordTypes/Amendment.recordType-meta.xml
<RecordType>
    <fullName>Amendment</fullName>
    <active>true</active>
    <businessProcess>Amend And Renewal Process</businessProcess>
    <description>Used for modifying an existing Subscription Agreement--to perform Decommissions, mid-term Add Ons, or Debookings.</description>
    <label>Amendment</label>
</RecordType>