unpackaged/main/default/objects/Opportunity/recordTypes/Products_Services.recordType-meta.xml
<RecordType>
    <fullName>Products_Services</fullName>
    <active>true</active>
    <businessProcess>Opportunity Process</businessProcess>
    <description>To be used for quotes containing a mixture of product types (subscription, services, etc). Contains all the elements of Value Selling.</description>
    <label>Products &amp; Services</label>
</RecordType>