unpackaged/main/default/objects/Opportunity/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <businessProcess>Amend And Renewal Process</businessProcess>
    <label>Renewal</label>
</RecordType>