unpackaged/main/default/objects/Opportunity/recordTypes/Services_Only.recordType-meta.xml
<RecordType>
    <fullName>Services_Only</fullName>
    <active>true</active>
    <businessProcess>Opportunity Process</businessProcess>
    <description>Used for Change Orders and Services Only deals (opportunities without products).</description>
    <label>Services Only</label>
</RecordType>