unpackaged/main/default/objects/Opportunity/validationRules/Can_not_advance_the_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_advance_the_stage</fullName>
    <active>true</active>
    <description>User cannot  move stage to Close Pending  if PO Required field is blank on the Account.</description>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;PF Super User&quot;,
  ISCHANGED(  StageName ),
     ISPICKVAL( StageName , &quot;Close Pending&quot;),
  ISPICKVAL( Account.PO_Required__c,&quot;&quot; ) 
  )</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>User cannot  move stage to Close Pending  if PO Required field is blank on the Account .</errorMessage>
</ValidationRule>